[package]
name = "mytest"
version = "0.1.0"
authors = ["xiao cai niao "]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder="1"
structopt="0.3.2"
sha1="0.6.0"
sha2="0.8.0"
uuid = "0.7.4"
serde_json = "1.0.40"
bigdecimal = "0.2"
base64 = "0.10.1"
serde = "1.0.101"
failure = "0.1.5"
hex = "0.4.0"
mysql_common = "0.18"